--- a/src/main/resources/pl/kognitywistyka/ppa2021/COVID.fxml
+++ b/src/main/resources/pl/kognitywistyka/ppa2021/COVID.fxml
@@ -1,7 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
-	
+
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.BorderPane?>
-	
-<BorderPane xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.kognitywistyka.ppa2021.COVIDController">
-	<!-- TODO Add Nodes -->
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
+
+<BorderPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.kognitywistyka.ppa2021.COVIDController">
+   <top>
+      <Pane prefHeight="64.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+         <children>
+            <Button fx:id="chooseButton" layoutX="356.0" layoutY="20.0" mnemonicParsing="false" onAction="#triggerChooseFile" text="Wybierz plik..." />
+         </children>
+      </Pane>
+   </top>
+   <center>
+      <VBox prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <children>
+            <Pane prefHeight="73.0" prefWidth="800.0">
+               <children>
+                  <Label layoutX="254.0" layoutY="28.0" text="Wybierz kraj:" />
+                  <ComboBox fx:id="chooseCountry" disable="true" layoutX="447.0" layoutY="24.0" onAction="#triggerChooseCountry" prefWidth="150.0" />
+               </children>
+            </Pane>
+            <TableView fx:id="dataTable" prefHeight="473.0" prefWidth="800.0">
+              <columns>
+                <TableColumn prefWidth="140.0" text="Data" />
+                <TableColumn prefWidth="192.0" text="Liczba przypadków" />
+                <TableColumn prefWidth="230.0" text="Liczba zgonów" />
+              </columns>
+            </TableView>
+         </children>
+      </VBox>
+   </center>
 </BorderPane>
